docs/api/qiskit/0.19/qiskit.circuit.library.SwapGate.mdx
---
title: SwapGate (v0.19)
description: API reference for qiskit.circuit.library.SwapGate in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.SwapGate
---

# SwapGate

<Class id="qiskit.circuit.library.SwapGate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/library/standard_gates/swap.py" signature="SwapGate(label=None)" modifiers="class">
  The SWAP gate.

  This is a symmetric and Clifford gate.

  **Circuit symbol:**

  ```python
  q_0: ─X─
        │
  q_1: ─X─
  ```

  **Matrix Representation:**

$$
\begin{split}SWAP =
\begin{pmatrix}
1 & 0 & 0 & 0 \\
0 & 0 & 1 & 0 \\
0 & 1 & 0 & 0 \\
0 & 0 & 0 & 1
\end{pmatrix}\end{split}
$$

  The gate is equivalent to a state swap and is a classical logic gate.

$$
|a, b\rangle \rightarrow |b, a\rangle
$$

  Create new SWAP gate.

  ## Attributes

  <span id="swapgate-decompositions" />

  ### decompositions

  <Attribute id="qiskit.circuit.library.SwapGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="swapgate-definition" />

  ### definition

  <Attribute id="qiskit.circuit.library.SwapGate.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  <span id="swapgate-label" />

  ### label

  <Attribute id="qiskit.circuit.library.SwapGate.label" attributeTypeHint="str">
    Return gate label

    **Return type**

    `str`
  </Attribute>

  <span id="swapgate-params" />

  ### params

  <Attribute id="qiskit.circuit.library.SwapGate.params">
    return instruction params.
  </Attribute>

  ## Methods

  <span id="swapgate-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.circuit.library.SwapGate.add_decomposition" signature="SwapGate.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="swapgate-assemble" />

  ### assemble

  <Function id="qiskit.circuit.library.SwapGate.assemble" signature="SwapGate.assemble()">
    Assemble a QasmQobjInstruction

    **Return type**

    [`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")
  </Function>

  <span id="swapgate-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.SwapGate.broadcast_arguments" signature="SwapGate.broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="swapgate-c-if" />

  ### c\_if

  <Function id="qiskit.circuit.library.SwapGate.c_if" signature="SwapGate.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="swapgate-control" />

  ### control

  <Function id="qiskit.circuit.library.SwapGate.control" signature="SwapGate.control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Return a (multi-)controlled-SWAP gate.

    One control returns a CSWAP (Fredkin) gate.

    **Parameters**

    *   **num\_ctrl\_qubits** (*int*) – number of control qubits.
    *   **label** (*str or None*) – An optional label for the gate \[Default: None]
    *   **ctrl\_state** (*int or str or None*) – control state expressed as integer, string (e.g. ‘110’), or None. If None, use all 1s.

    **Returns**

    controlled version of this gate.

    **Return type**

    [ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")
  </Function>

  <span id="swapgate-copy" />

  ### copy

  <Function id="qiskit.circuit.library.SwapGate.copy" signature="SwapGate.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="swapgate-inverse" />

  ### inverse

  <Function id="qiskit.circuit.library.SwapGate.inverse" signature="SwapGate.inverse()">
    Return inverse Swap gate (itself).
  </Function>

  <span id="swapgate-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.circuit.library.SwapGate.is_parameterized" signature="SwapGate.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="swapgate-mirror" />

  ### mirror

  <Function id="qiskit.circuit.library.SwapGate.mirror" signature="SwapGate.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="swapgate-power" />

  ### power

  <Function id="qiskit.circuit.library.SwapGate.power" signature="SwapGate.power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  <span id="swapgate-qasm" />

  ### qasm

  <Function id="qiskit.circuit.library.SwapGate.qasm" signature="SwapGate.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="swapgate-repeat" />

  ### repeat

  <Function id="qiskit.circuit.library.SwapGate.repeat" signature="SwapGate.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="swapgate-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.circuit.library.SwapGate.to_matrix" signature="SwapGate.to_matrix()">
    Return a numpy.array for the SWAP gate.
  </Function>
</Class>

